--- a/Dairy_Care_System/templates/stocknotification.html
+++ b/Dairy_Care_System/templates/stocknotification.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,8 @@
         /* Global styles */
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
+            background: url('{% static "images/notification.jpg" %}') no-repeat center center fixed;
+            background-size: cover;
             margin: 0;
             padding: 0;
             display: flex;
