--- a/Dairy_Care_System/templates/feedbackreview.html
+++ b/Dairy_Care_System/templates/feedbackreview.html
@@ -19,7 +19,8 @@
             text-align: center;
             color: #000000;
             margin-bottom: 30px;
-            font-size: 2.5em;
+            font-family: Copperplate, Papyrus, fantasy;
+            font-size: 3.0em;
         }
         .feedback-list {
             max-width: 1200px; /* Increased width */
