--- a/Dairy_Care_System/templates/milkdetails.html
+++ b/Dairy_Care_System/templates/milkdetails.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-            background: url('{% static "images/rrr.jpg" %}') no-repeat center center fixed;
+            background: url('{% static "images/milkdetails.jpg" %}') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
             font-family: 'Arial', sans-serif;
@@ -65,9 +65,9 @@
         h1 {
             text-align: center;
             margin: 50px 0;
-            font-size: 2.5em;
+            font-size: 3.0em;
             color: #000000;
-            font-family: 'Comic Sans MS', cursive;
+            font-family: Copperplate, Papyrus, fantasy;
         }
 
         table {
